# autocompile

./: .gitignore  DOMAINS.md  LICENSE  README.md  pyproject.toml
datalog/: compile.py  egglog_compile.py  engine.py  mine_patterns.dl  mine_patterns.py  souffle_compile.py
examples/edge-compute/: generate_traces.py  traces.lp
examples/lab-synthesis/: generate_traces.py  traces.lp
examples/lerobot-pick-place/: result.json  result_relaxed.json  traces.lp
examples/medical-ed/: result.json
examples/order-updates/: result.json  traces.json  traces.lp
examples/robotics-pick-place/: generate_traces.py
examples/single-demo/: result.json
examples/travel-updates/: job.json  real_traces.json  real_traces.lp  result.json  synthetic_traces.json  synthetic_traces.lp  traces.json  traces.lp
experiments/: README.md
experiments/examples/edge-compute/: result.json
experiments/examples/lab-synthesis/: result.json
experiments/examples/lerobot-discovered/: result.json  traces.lp
experiments/examples/robotics-pick-place/: result.json  traces.lp
experiments/examples/single-demo/: result_ep0.json  traces.lp
experiments/src/: bench.py  demo_diff.py  lerobot_to_asp.py  llm_baseline.py  scene_synth.py  single_demo_compile.py  trajectory_rewrite.py
rules/: mine_patterns.lp  mine_patterns_relaxed.lp
spec/: trace-format.md
src/: benchmark.py  codegen.py  compile.py  llm_baseline.py  mimicel_to_asp.py  rerun_viewer.py  scene_layout.py  scene_synth.py  segment_discover.py  world_model.py  xes_to_asp.py
src/strategies/: __init__.py
(+1 files in other folders)
