[project]
name = "autocompile"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "clingo>=5.8.0",
    "datasets>=4.8.4",
    "egglog>=13.1.0",
    "huggingface-hub>=1.8.0",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "rerun-sdk>=0.31.1",
    "scipy>=1.17.1",
]
